Revision history for Hailo

{{$NEXT}}

0.36 2010-03-29 00:15:35

    - Add a test to try to smoke out a test failure we've been having
      for a while. See the commit message for
      21f68bd79d2fc59505887311042d6d16c5cf79dd for a very long and
      boring explanation.

0.35 2010-03-27 21:27:33

    - The error "You've manually supplied an order of" error message
      was always incorrect. It contained variables that weren't being
      interpolated.

    - Move some of our test data into the new Bot::Training dist.

    - Fix 'v-string in use/require non-portable' warnings from a osx
      smoker by using 5.010 instead of 5.10.0.

0.34 2010-03-20 23:26:27

    - Reword the UPGRADING section in Hailo's POD to be less
      confusing.

    - Die if the user manually specified an order that isn't
      equivalent to the existing database he's loading from.

    - Hailo now uses CPAN's RT as its default bugtracker instead of
      GitHub's issue tracker. RT sucks but at least we can get at our
      issues using something that isn't a web interface if we use RT.

    - Link to our new website at http://hailo.github.com and mention
      the Hailo web interface at http://www.dhdo.org in the POD.

    - Enforce arguments being HashRef[Str] (instead of just HashRef)
      in Hailo::Role::Arguments.

    - Code cleanup in Hailo.pm to remove duplication.

0.33 2010-03-20 01:57:33

    - Optimize Hailo::Engine::Default to use less method calls. On
      t/hailo/real_workload.t (i.e. mass replies) this speeds up Hailo
      by 8%:

                         s/iter System Hailo    lib Hailo
            System Hailo   74.8           --          -7%
            lib Hailo      69.4           8%           --
    
      Furthermore replace the use of ->fetchall_hashref in a tight
      loop with ->fetchall_arrayref. This sped up mass replies by
      almost 60% (added to the 8% above):

                         s/iter System Hailo    lib Hailo