@@ -12,7 +12,7 @@ no_AutoPrereq    = 1
 use_MakeMaker    = 0
 use_CompileTests = 0
 
-[=inc::Dist::Zilla::Plugin::HailoMakeMaker / HailoMakeMaker]
+[=inc::HailoMakeMaker / HailoMakeMaker]
 
 ; TODO:
 ; * Set build/test requires and not just all under prereq
